<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNameFileSelected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_16"
        android:textColor="@color/sqr_black"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toStartOf="@+id/tvVersion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/scan_qr_name_selected_excel_file" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/scan_qr_scan_version"
        android:textColor="@color/sqr_grey"
        android:textSize="@dimen/sp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_16"
        android:textColor="@color/sqr_black"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameFileSelected"
        tools:text="@string/scan_qr_progressing" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvListNotScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/scan_qr_list_not_scan"
        android:textColor="@color/sqr_black"
        android:textSize="@dimen/sp_16"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProgress"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvIndexScanned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_16"
        android:textColor="@color/sqr_black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvListNotScan"
        tools:text="@string/scan_qr_index_scanned" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/btnSelectExcelFile"
        app:layout_constraintTop_toBottomOf="@+id/tvIndexScanned"
        tools:listitem="@layout/sqr_item_excel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectExcelFile"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_8"
        android:padding="@dimen/dp_8"
        android:text="@string/scan_qr_select_excel_file"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:icon="@drawable/sqr_ic_select_file"
        app:iconSize="@dimen/dp_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnScanQR"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnScanQR"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:padding="@dimen/dp_8"
        android:text="@string/scan_qr_btn_scan"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:icon="@drawable/sqr_ic_scan_qr"
        app:iconSize="@dimen/dp_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSelectExcelFile" />

</androidx.constraintlayout.widget.ConstraintLayout>